doc: update documentation
