# swagger/swagger_output.json
@@ -7,13 +7,22 @@
   },
   "host": "localhost",
   "basePath": "/",
-  "schemes": ["http", "https"],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
+  "schemes": [
+    "http",
+    "https"
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/auth/sign-up": {
       "post": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "description": "Route for register user.",
         "parameters": [
           {
@@ -35,7 +44,9 @@
     },
     "/auth/sign-in": {
       "post": {
-        "tags": ["Users"],
+        "tags": [
+          "Sessions"
+        ],
         "description": "Route for user login.",
         "parameters": [
           {
@@ -57,7 +68,9 @@
     },
     "/logout/": {
       "delete": {
-        "tags": ["Users"],
+        "tags": [
+          "Sessions"
+        ],
         "description": "",
         "parameters": [
           {
@@ -78,7 +91,9 @@
     },
     "/transactions/": {
       "post": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "Route to add user transactions.",
         "parameters": [
           {
@@ -98,7 +113,9 @@
         }
       },
       "get": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "Route to get all user transactions and balance.",
         "parameters": [
           {
@@ -116,7 +133,9 @@
     },
     "/transactions/{id}": {
       "delete": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "Route to delete a user transaction.",
         "parameters": [
           {
@@ -137,7 +156,9 @@
         }
       },
       "patch": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "Route to update a user transaction.",
         "parameters": [
           {
@@ -187,7 +208,11 @@
         },
         "confirmPassword": {}
       },
-      "required": ["username", "email", "password"],
+      "required": [
+        "username",
+        "email",
+        "password"
+      ],
       "additionalProperties": false
     },
     "loginSchemaSwagger": {
@@ -202,7 +227,10 @@
           "minLength": 6
         }
       },
-      "required": ["email", "password"],
+      "required": [
+        "email",
+        "password"
+      ],
       "additionalProperties": false
     },
     "transactionCreateSchemaSwagger": {
@@ -219,10 +247,14 @@
         "type": {
           "anyOf": [
             {
-              "enum": ["incoming"]
+              "enum": [
+                "incoming"
+              ]
             },
             {
-              "enum": ["outgoing"]
+              "enum": [
+                "outgoing"
+              ]
             }
           ]
         },
@@ -231,7 +263,12 @@
           "format": "date-time"
         }
       },
-      "required": ["valueInCents", "description", "type", "date"],
+      "required": [
+        "valueInCents",
+        "description",
+        "type",
+        "date"
+      ],
       "additionalProperties": false
     },
     "transactionUpdateSchemaSwagger": {
@@ -248,10 +285,14 @@
         "type": {
           "anyOf": [
             {
-              "enum": ["incoming"]
+              "enum": [
+                "incoming"
+              ]
             },
             {
-              "enum": ["outgoing"]
+              "enum": [
+                "outgoing"
+              ]
             }
           ]
         },
@@ -271,7 +312,9 @@
           "maxLength": 24
         }
       },
-      "required": ["id"],
+      "required": [
+        "id"
+      ],
       "additionalProperties": false
     }
   }
